--- a/style.css
+++ b/style.css
@@ -7,10 +7,10 @@ body > p:last-child:hover {
     font-style: italic;
     text-transform: uppercase;
 }
-#second-div > p:nth-child(2n+1) {
+#second-div > p:nth-of-type(2n+1) {
     color: red;
 }
-#second-div > p:nth-child(2n+2) {
+#second-div > p:nth-of-type(2n+2) {
     color: blue;
 }
 a {
